# Apollo.Images

./: .gitignore  CMakeLists.txt  CMakeSetFilter.cmake  LICENSE  README.md
Code/: Apollo.Images.Code.cmake
Code/Apollo.Images/: CMakeLists.txt  Color.h  FindApollo.Images.cmake  IImageLoader.h  IImageSaver.h  Image.cpp  Image.h  InvalidPngException.h  PixelFormat.h  PngHeader.h  PngLoader.cpp  PngLoader.h  PngSaver.cpp  PngSaver.h
Code/Apollo.Images.UnitTests/: CMakeLists.txt  ColorTest.cpp  ImageTest.cpp  PathHelper.h  PngLoaderTest.cpp  PngSaverTest.cpp
Code/Apollo.Images.UnitTests/TestImages/: NotAPng.txt
external_libs/: FindGoogleTest.cmake  FindLIBPNG.cmake  FindZLIB.cmake  googletest.cmake  libpng.cmake  zlib.cmake
